Fixed the display shifting to right bug :bug: Added dark mode toggle button for smaller devices :sparkles: Fix img width:100% for smaller devices for images with class "no-100-pct" :hammer:

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,3 +8,6 @@
 .clearFix {
   clear: both;
 }
+.no-100-pct{
+  width:unset !important;
+}
